[gd_scene load_steps=5 format=3 uid="uid://v04n62bawvfe"]

[ext_resource type="Theme" uid="uid://c77ydp5jt8a4x" path="res://ui/popups/project_settings_menu/theming/screen_project_settings_theme.tres" id="1_qbgtc"]
[ext_resource type="Script" path="res://ui/popups/project_settings_menu/project_settings_menu.gd" id="2_uibc8"]
[ext_resource type="LabelSettings" uid="uid://dijc037wgy21a" path="res://ui/popups/project_settings_menu/theming/project_settings_label_title.tres" id="3_c31ci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p646q"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0

[node name="PopupProjectSettingsMenu" type="Window"]
title = "PROJECT_SETTINGS_TITLE"
position = Vector2i(0, 36)
size = Vector2i(650, 650)
keep_title_visible = true
theme = ExtResource("1_qbgtc")
script = ExtResource("2_uibc8")

[node name="Scroll" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_p646q")

[node name="VBox" type="VBoxContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GeneralLabel" type="Label" parent="Scroll/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "PROJECT_SETTINGS_TITLE_GENERAL"
label_settings = ExtResource("3_c31ci")

[node name="GeneralSettingsGrid" type="GridContainer" parent="Scroll/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 2

[node name="ProjectTitleLabel" type="Label" parent="Scroll/VBox/GeneralSettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "PROJECT_SETTINGS_TEXT_TITLE"

[node name="ProjectTitleLineEdit" type="LineEdit" parent="Scroll/VBox/GeneralSettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_INPUT_PROJECT_TITLE"

[node name="QualityLabel" type="Label" parent="Scroll/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "PROJECT_SETTINGS_TITLE_QUALITY"
label_settings = ExtResource("3_c31ci")

[node name="QualitySettingsGrid" type="GridContainer" parent="Scroll/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 2

[node name="ResolutionLabel" type="Label" parent="Scroll/VBox/QualitySettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "PROJECT_SETTINGS_TEXT_RESOLUTION"

[node name="ResolutionHBox" type="HBoxContainer" parent="Scroll/VBox/QualitySettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 7

[node name="XLabel" type="Label" parent="Scroll/VBox/QualitySettingsGrid/ResolutionHBox"]
layout_mode = 2
auto_translate = false
text = "x:"

[node name="ResolutionXSpinBox" type="SpinBox" parent="Scroll/VBox/QualitySettingsGrid/ResolutionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_INPUT_RESOLUTION_X"
min_value = 1.0
max_value = 100000.0
value = 1920.0

[node name="YLabel" type="Label" parent="Scroll/VBox/QualitySettingsGrid/ResolutionHBox"]
layout_mode = 2
auto_translate = false
text = "Y:"

[node name="ResolutionYSpinBox" type="SpinBox" parent="Scroll/VBox/QualitySettingsGrid/ResolutionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_INPUT_RESOLUTION_Y"
min_value = 1.0
max_value = 100000.0
value = 1920.0

[node name="FramerateLabel" type="Label" parent="Scroll/VBox/QualitySettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "PROJECT_SETTINGS_TEXT_FRAMERATE"

[node name="FramerateSpinBox" type="SpinBox" parent="Scroll/VBox/QualitySettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "TOOLTIP_INPUT_FPS"
min_value = 1.0
max_value = 240.0
value = 1.0

[node name="Spacer1" type="HSeparator" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_submitted" from="Scroll/VBox/GeneralSettingsGrid/ProjectTitleLineEdit" to="." method="_on_project_title_line_edit_text_submitted"]
[connection signal="value_changed" from="Scroll/VBox/QualitySettingsGrid/ResolutionHBox/ResolutionXSpinBox" to="." method="_on_resolution_x_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/VBox/QualitySettingsGrid/ResolutionHBox/ResolutionYSpinBox" to="." method="_on_resolution_y_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/VBox/QualitySettingsGrid/FramerateSpinBox" to="." method="_on_framerate_spin_box_value_changed"]
